--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                         <div class="pull-right text-right">
                             <ul class="list-inline">
                                 <li>
-                                    <div><i class="fa fa-envelope-o"></i> email@domain.com</div>
+                                    <div><i class="fa fa-envelope-o"></i> biancamorvan@gmail.com</div>
                                 </li>
                                 <li>
-                                    <div class="meta-item"><i class="fa fa-mobile"></i> +44 8780 648 605</div>
+                                    <div class="meta-item"><i class="fa fa-mobile"></i> +262 693 20 52 22</div>
                                 </li>
                             </ul>
                         </div>
