--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -96,11 +96,57 @@
                 <div class="collapse navbar-collapse" id="main-navigation">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Accueil <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
-                               
+                                <li class="dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Agency</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="index-agency-1.html">Agency - Layout 1</a></li>
+                                        <li><a href="index-agency-2.html">Agency - Layout 2</a></li>
+                                        <li><a href="index-agency-3.html">Agency - Layout 3</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Portfolio</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="index-portfolio-1.html">Portfolio - Layout 1</a></li>
+                                        <li><a href="index-portfolio-2.html">Portfolio - Layout 2</a></li>
+
+                                    </ul>
+                                </li>
+                                <li class="dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Corporate</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="index-corporate-1.html">Corporate - Layout 1</a></li>
+                                        <li><a href="index-corporate-2.html">Corporate - Layout 2</a></li>
+                                        <li><a href="index-corporate-3.html">Corporate - Layout 3</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Landing Page</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="index-landing-1.html">Landing Page - Layout 1</a></li>
+                                        <li><a href="index-landing-2.html">Landing Page - Layout 2</a></li>
+
+                                    </ul>
+                                </li>
+                                <li class="dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Blog</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="index-blog-1.html">Blog - Layout 1</a></li>
+                                        <li><a href="index-blog-2.html">Blog - Layout 2</a></li>
+                                        <li><a href="index-blog-3.html">Blog - Layout 3</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="index-app.html">Home - App</a></li>
+                                <li><a href="index-restaurant.html">Home - Restaurant</a></li>
+                                
+                                <li><a href="index-minimal.html">Home - Minimal</a></li>
+                                <li><a href="index-countdown.html">Home - Coming Soon</a></li>
+                            </ul>
+                        </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown"> Nos circuits <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Headers <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="header-1.html">Header 1</a></li>
                                 <li><a href="header-2.html">Header 2</a></li>
