--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -72,7 +72,7 @@
                                     <div><i class="fa fa-envelope-o"></i> biancamorvan@gmail.com</div>
                                 </li>
                                 <li>
-                                    <div class="meta-item"><i class="fa fa-mobile"></i> +262 693 20 52 22</div>
+                                    <div class="meta-item"><i class="fa fa-mobile"></i> +262 6 93 20 52 22</div>
                                 </li>
                             </ul>
                         </div>
