--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -96,7 +96,7 @@
                 <div class="collapse navbar-collapse" id="main-navigation">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Accueil<span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Agency</a>
@@ -146,7 +146,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Headers <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Nos circuits<span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="header-1.html">Header 1</a></li>
                                 <li><a href="header-2.html">Header 2</a></li>
@@ -157,7 +157,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Footers <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">L'équipe <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="footer-1.html">Footer 1</a></li>
                                 <li><a href="footer-2.html">Footer 2</a></li>
@@ -168,7 +168,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Crée ton futur circuit <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - About Us</a>
@@ -195,7 +195,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Plan d'accès <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio - Full Grid</a>
@@ -270,7 +270,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Shop <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Contact <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="index-shop.html">Home Shop</a></li>
                                 <li><a href="single-product.html">Single Product</a></li>
