--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -299,8 +299,8 @@
         <header id="headerwrap" class="backstretched fullheight agency-slider backstretch-overlay-alt">
             <div class="container vertical-center">
                 <div class="intro-text vertical-center text-left smoothie">
-                    <div class="intro-heading wow fadeIn heading-font" data-wow-delay="0.2s">Welcome To Kompleet</div>
-                    <div class="intro-sub-heading wow fadeIn secondary-font" data-wow-delay="0.4s">We are here to help you <span class="rotate">grow, profit, succeed</span></div>
+                    <div class="intro-heading wow fadeIn heading-font" data-wow-delay="0.2s">ExploRun</div>
+                    <div class="intro-sub-heading wow fadeIn secondary-font" data-wow-delay="0.4s">Vous souhaitez découvrir la Réunion autrement ? Découvrez nos circuits <span class="rotate">divertissants, personnalisés, sportifs</span></div>
                     <a href="#welcome" class="btn btn-primary btn-white mt30 page-scroll" data-wow-delay="0.6s">Find Out More</a>
                 </div>
             </div>
