--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -301,7 +301,7 @@
                 <div class="intro-text vertical-center text-left smoothie">
                     <div class="intro-heading wow fadeIn heading-font" data-wow-delay="0.2s">ExploRun</div>
                     <div class="intro-sub-heading wow fadeIn secondary-font" data-wow-delay="0.4s">Vous souhaitez découvrir la Réunion autrement ? Découvrez nos circuits <span class="rotate">divertissants, personnalisés, sportifs</span></div>
-                    <a href="#welcome" class="btn btn-primary btn-white mt30 page-scroll" data-wow-delay="0.6s">Find Out More</a>
+                    <a href="#welcome" class="btn btn-primary btn-white mt30 page-scroll" data-wow-delay="0.6s">En savoir plus</a>
                 </div>
             </div>
         </header>
@@ -312,8 +312,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 mb100 wow">
-                            <h2 class="section-heading">Welcome To Kompleet</h2>
-                            <h3 class="section-subheading secondary-font">Were very happy to see you.</h3>
+                            <h2 class="section-heading">Bienvenue à ExploRun</h2>
+                            <h3 class="section-subheading secondary-font">La Réunion autrement</h3>
                         </div>
                     </div>
                 </div>
@@ -321,9 +321,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <p class="lead">Sold old ten are quit lose deal his sent. You correct how sex several far distant believe journey parties. We shyness enquire uncivil affixed it carried to. </p>
-                            <p>End sitting shewing who saw besides son musical adapted. Contrasted interested eat alteration pianoforte sympathize was. He families believed if no elegance interest surprise an. It abode wrong miles an so delay plate.</p>
-                            <p class="mt30"><a href="#contact" class="btn btn-primary btn-theme page-scroll">Get In Touch</a></p>
+                            <p class="lead">Vous êtes une entreprise et vous recherchez un séminaire original et divertissant pour vos employés ? </p>
+                            <p>Découvrez nos circuits adaptés pour les entreprises de petites, moyennes et grandes tailles</p>
+                            <p class="mt30"><a href="#contact" class="btn btn-primary btn-theme page-scroll">Je souhaite avoir un devis personnalisé</a></p>
                         </div>
 
                         <div class="col-md-6">
@@ -350,7 +350,7 @@
                                                 </div>
                                                 <div class="col-xs-12 hover-item-caption smoothie">
                                                     <div class="vertical-center">
-                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">John Doe</a></h3>
+                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Bianca MORVAN</a></h3>
                                                         <ul class="smoothie list-inline social-links wow">
                                                             <li>
                                                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -382,7 +382,7 @@
                                                 </div>
                                                 <div class="col-xs-12 hover-item-caption smoothie">
                                                     <div class="vertical-center">
-                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Barry Scott</a></h3>
+                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Romain MOUTOUSSAMY</a></h3>
                                                         <ul class="smoothie list-inline social-links wow">
                                                             <li>
                                                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -414,7 +414,7 @@
                                                 </div>
                                                 <div class="col-xs-12 hover-item-caption smoothie">
                                                     <div class="vertical-center">
-                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Tom Smooth</a></h3>
+                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Lindy VINGADARETTY</a></h3>
                                                         <ul class="smoothie list-inline social-links wow">
                                                             <li>
                                                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -446,7 +446,7 @@
                                                 </div>
                                                 <div class="col-xs-12 hover-item-caption smoothie">
                                                     <div class="vertical-center">
-                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Harvey Wallace</a></h3>
+                                                        <h3 class="smoothie"><a href="single-portfolio.html" title="view project">Georgie GANNE</a></h3>
                                                         <ul class="smoothie list-inline social-links wow">
                                                             <li>
                                                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -477,8 +477,8 @@
                         </div>
                         <div class="col-sm-3 match-height">
                             <div class="vertical-center">
-                                <h2 class="section-heading">The Team</h2>
-                                <h3 class="section-subheading secondary-font">Dedicated to excellence.</h3>
+                                <h2 class="section-heading">L'équipe</h2>
+                                <h3 class="section-subheading secondary-font">Des compétences spécialisées et complémentaires</h3>
                             </div>
                         </div>
                     </div>
@@ -494,8 +494,8 @@
                             <div class="icon-box-1 match-height mb30">
                                 <i class="fa-4x pe-7s-camera"></i>
                                 <div class="content-area">
-                                    <h3 class="title">Web Design</h3>
-                                    <div class="content">Goodbye gray sky hello blue. There's nothing can hold me when I hold you. Feels so right it cant be wrong.</div>
+                                    <h3 class="title">Nos circuits pour les enfants</h3>
+                                    <div class="content">De la Reine des Neiges à Dragons, il y en a pour tous les goûts pour faire rêver vos petite princesses et vos petits Spiderman</div>
                                 </div>
                             </div>
                         </div>
@@ -503,8 +503,8 @@
                             <div class="icon-box-1 match-height mb30">
                                 <i class="fa-4x pe-7s-camera"></i>
                                 <div class="content-area">
-                                    <h3 class="title">Web Design</h3>
-                                    <div class="content">Goodbye gray sky hello blue. There's nothing can hold me when I hold you. Feels so right it cant be wrong.</div>
+                                    <h3 class="title">Nos circuits culturels, musicaux et culinaires</h3>
+                                    <div class="content">Une envie de découvrir la Réunion autour d'une randonnée au thème de la cuisine, sur un air de Jazz ou des séances de médidation ?</div>
                                 </div>
                             </div>
                         </div>
@@ -512,8 +512,8 @@
                             <div class="icon-box-1 match-height mb30">
                                 <i class="fa-4x pe-7s-camera"></i>
                                 <div class="content-area">
-                                    <h3 class="title">Web Design</h3>
-                                    <div class="content">Goodbye gray sky hello blue. There's nothing can hold me when I hold you. Feels so right it cant be wrong.</div>
+                                    <h3 class="title">Nos circuits sportifs</h3>
+                                    <div class="content">Pour les plus et les moins sportifs, il y en a pour tout le monde, de la randonnée pédestre à randonnée VTT...</div>
                                 </div>
                             </div>
                         </div>
@@ -528,16 +528,16 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 mb100 wow">
-                            <h2 class="section-heading">Recent Works</h2>
-                            <h3 class="section-subheading secondary-font">A small taste of our success.</h3>
+                            <h2 class="section-heading">Notre dernière sortie</h2>
+                            <h3 class="section-subheading secondary-font">Les enfants se sont régalés</h3>
                         </div>
                         <div class="col-md-6 text-right">
                             <ul class="portfolio-filter mb30 list-inline wow">
-                                <li><a class="btn btn-primary active" href="#" data-filter="*">All</a></li>
-                                <li><a class="btn btn-primary" href="#" data-filter=".apps">Apps</a></li>
-                                <li><a class="btn btn-primary" href="#" data-filter=".design">Design</a></li>
-                                <li><a class="btn btn-primary" href="#" data-filter=".photography">Photography</a></li>
-                                <li><a class="btn btn-primary" href="#" data-filter=".video">Video</a></li>
+                                <li><a class="btn btn-primary active" href="#" data-filter="*">Nos circuits pour enfants</a></li>
+                                <li><a class="btn btn-primary" href="#" data-filter=".apps">Nos circuits culturels</a></li>
+                                <li><a class="btn btn-primary" href="#" data-filter=".design">Nos circuits sportifs</a></li>
+                                <li><a class="btn btn-primary" href="#" data-filter=".photography">Nos circuits B2B</a></li>
+                                <li><a class="btn btn-primary" href="#" data-filter=".video">Galérie</a></li>
                             </ul>
                         </div>
                     </div>
@@ -677,12 +677,12 @@
                 <ul class="nav nav-justified icon-tabs" id="nav-tabs" role="tablist">
                     <li role="presentation" class="ptb smoothie active">
                         <a href="#contact1" aria-controls="contact1" role="tab" data-toggle="tab">
-                            <span class="tabtitle heading-font smoothie text-right">Email Us</span>
+                            <span class="tabtitle heading-font smoothie text-right">Contactez-nous</span>
                         </a>
                     </li>
                     <li role="presentation" class="ptb smoothie">
                         <a href="#contact2" aria-controls="contact2" role="tab" data-toggle="tab">
-                            <span class="tabtitle heading-font smoothie text-left">Visit Us</span>
+                            <span class="tabtitle heading-font smoothie text-left">Passez nous voir</span>
                         </a>
                     </li>
                 </ul>
@@ -756,21 +756,21 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="widget about-us-widget">
-                                    <h4 class="widget-title"><strong>Global</strong> Coverage</h4>
+                                    <h4 class="widget-title"><strong>Explo</strong>Run</h4>
                                     <p>Professionally monetize team building materials for 24/7 results. Holisticly transition corporate platforms vis-a-vis cutting-edge experiences. Dynamically strategize ubiquitous applications for premier initiatives. Interactively seize resource sucking niche markets.</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="widget">
-                                    <h4 class="widget-title"><strong>Latest</strong> Articles</h4>
+                                    <h4 class="widget-title"><strong>Nos derniers</strong> articles</h4>
                                     <div>
                                         <div class="media">
                                             <div class="pull-left">
                                                 <img class="widget-img" src="assets/img/widget/widget1.jpg" alt="">
                                             </div>
                                             <div class="media-body">
-                                                <span class="media-heading"><a href="#">Blog Post A</a></span>
-                                                <small class="muted">Posted 14 April 2015</small>
+                                                <span class="media-heading"><a href="#">Nos coins secrets à Ilet des Orangers</a></span>
+                                                <small class="muted">Publié le 16 août 2021</small>
                                             </div>
                                         </div>
                                         <div class="media">
@@ -778,8 +778,8 @@
                                                 <img class="widget-img" src="assets/img/widget/widget2.jpg" alt="">
                                             </div>
                                             <div class="media-body">
-                                                <span class="media-heading"><a href="#">Blog Post B</a></span>
-                                                <small class="muted">Posted 14 April 2015</small>
+                                                <span class="media-heading"><a href="#">Un tourisme eco responsable</a></span>
+                                                <small class="muted">Publié le 16 juillet 2021</small>
                                             </div>
                                         </div>
                                     </div>
@@ -787,17 +787,17 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="widget">
-                                    <h4 class="widget-title">Popular Tags</h4>
+                                    <h4 class="widget-title">Tags populaires</h4>
                                     <div class="tagcloud">
                                         <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Local</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Business</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Media</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Photogtraphy</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Aid</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Fashion</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">News</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Cars</a>
-                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Global Affairs</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Tourisme</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Ecoresponsable</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Photography</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Randonnée</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Culture</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">LaRéunion</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Yoga</a>
+                                        <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Tourismeautrement</a>
                                         <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Music</a>
                                         <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">Downloads</a>
                                         <a href="#" class="tag-link btn btn-theme btn-white btn-xs smoothie" title="3 topics">MP3</a>
