--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -88,8 +88,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand smoothie logo logo-light" href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
-                    <a class="navbar-brand smoothie logo logo-dark" href="index.html"><img src="assets/img/logo_reverse.png" alt="logo"></a>
+                    <a class="navbar-brand smoothie logo logo-light" href="index.html"><img src="assets/img/logo.png" alt="logo" width="200px"></a>
+                    <a class="navbar-brand smoothie logo logo-dark" href="index.html"><img src="assets/img/logo_reverse.png" alt="logo"></a> 
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -98,62 +98,63 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Accueil<span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="dropdown-submenu">
+
+                               <!--  <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Agency</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="index-agency-1.html">Agency - Layout 1</a></li>
                                         <li><a href="index-agency-2.html">Agency - Layout 2</a></li>
                                         <li><a href="index-agency-3.html">Agency - Layout 3</a></li>
                                     </ul>
-                                </li>
-                                <li class="dropdown-submenu">
+                                </li> -->
+                                <!-- <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Portfolio</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="index-portfolio-1.html">Portfolio - Layout 1</a></li>
                                         <li><a href="index-portfolio-2.html">Portfolio - Layout 2</a></li>
 
                                     </ul>
-                                </li>
-                                <li class="dropdown-submenu">
+                                </li> -->
+                                <!-- <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Corporate</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="index-corporate-1.html">Corporate - Layout 1</a></li>
                                         <li><a href="index-corporate-2.html">Corporate - Layout 2</a></li>
                                         <li><a href="index-corporate-3.html">Corporate - Layout 3</a></li>
                                     </ul>
-                                </li>
-                                <li class="dropdown-submenu">
+                                </li> -->
+                                <!-- <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Landing Page</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="index-landing-1.html">Landing Page - Layout 1</a></li>
                                         <li><a href="index-landing-2.html">Landing Page - Layout 2</a></li>
 
                                     </ul>
-                                </li>
-                                <li class="dropdown-submenu">
+                                </li> -->
+                                <!-- <li class="dropdown-submenu">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home - Blog</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="index-blog-1.html">Blog - Layout 1</a></li>
                                         <li><a href="index-blog-2.html">Blog - Layout 2</a></li>
                                         <li><a href="index-blog-3.html">Blog - Layout 3</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="index-app.html">Home - App</a></li>
-                                <li><a href="index-restaurant.html">Home - Restaurant</a></li>
-                                
-                                <li><a href="index-minimal.html">Home - Minimal</a></li>
-                                <li><a href="index-countdown.html">Home - Coming Soon</a></li>
+                                </li> -->
+                                <!-- <li><a href="index-app.html">Home - App</a></li> -->
+                                <!-- <li><a href="index-restaurant.html">Home - Restaurant</a></li>
+                                 -->
+                                <!-- <li><a href="index-minimal.html">Home - Minimal</a></li> -->
+                                <!-- <li><a href="index-countdown.html">Home - Coming Soon</a></li> -->
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Nos circuits<span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="header-1.html">Header 1</a></li>
+                                <!-- <li><a href="header-1.html">Header 1</a></li>
                                 <li><a href="header-2.html">Header 2</a></li>
                                 <li><a href="header-3.html">Header 3</a></li>
                                 <li><a href="header-4.html">Header 4</a></li>
                                 <li><a href="header-5.html">Header 5</a></li>
-                                <li><a href="header-6.html">Header 6</a></li>
+                                <li><a href="header-6.html">Header 6</a></li> -->
                             </ul>
                         </li>
                         <li class="dropdown">
