--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -160,39 +160,39 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">L'équipe <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="footer-1.html">Footer 1</a></li>
+                                <!-- <li><a href="footer-1.html">Footer 1</a></li>
                                 <li><a href="footer-2.html">Footer 2</a></li>
                                 <li><a href="footer-3.html">Footer 3</a></li>
                                 <li><a href="footer-4.html">Footer 4</a></li>
                                 <li><a href="footer-5.html">Footer 5</a></li>
-                                <li><a href="footer-6.html">Footer 6</a></li>
+                                <li><a href="footer-6.html">Footer 6</a></li> -->
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Crée ton futur circuit <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - About Us</a>
+                                    <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - About Us</a> -->
                                     <ul class="dropdown-menu">
-                                        <li><a href="about-us-1.html">About Us - Layout 1</a></li>
-                                        <li><a href="about-us-2.html">About Us - Layout 2</a></li>
+                                        <!-- <li><a href="about-us-1.html">About Us - Layout 1</a></li>
+                                        <li><a href="about-us-2.html">About Us - Layout 2</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="dropdown-submenu">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - Services</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="services-1.html">Services - Layout 1</a></li>
-                                        <li><a href="services-2.html">Services - Layout 2</a></li>
+                                    <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - Services</a>
+ -->                                    <ul class="dropdown-menu">
+                                        <<!-- li><a href="services-1.html">Services - Layout 1</a></li>
+                                        <li><a href="services-2.html">Services - Layout 2</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="dropdown-submenu">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - Contact</a>
+                                    <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - Contact</a> -->
                                     <ul class="dropdown-menu">
-                                        <li><a href="contact-us-1.html">Contact - Layout 1</a></li>
-                                        <li><a href="contact-us-2.html">Contact - Layout 2</a></li>
+                                        <!-- <li><a href="contact-us-1.html">Contact - Layout 1</a></li>
+                                        <li><a href="contact-us-2.html">Contact - Layout 2</a></li> -->
                                     </ul>
                                 </li>
-                                <li><a href="404.html">Pages - 404</a></li>
+                               <!--  <li><a href="404.html">Pages - 404</a></li> -->
                             </ul>
                         </li>
                         <li class="dropdown">
