--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -199,11 +199,11 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Plan d'accès <span class="pe-7s-angle-down"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio - Full Grid</a>
+                                    <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio - Full Grid</a> -->
                                     <ul class="dropdown-menu">
-                                        <li><a href="portfolio-full-grid-4col.html">Full Grid - 4 Columns</a></li>
+                                        <!-- <li><a href="portfolio-full-grid-4col.html">Full Grid - 4 Columns</a></li>
                                         <li><a href="portfolio-full-grid-3col.html">Full Grid - 3 Columns</a></li>
-                                        <li><a href="portfolio-full-grid-2col.html">Full Grid - 2 Columns</a></li>
+                                        <li><a href="portfolio-full-grid-2col.html">Full Grid - 2 Columns</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="dropdown-submenu">
