--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -88,7 +88,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand smoothie logo logo-light" href="index.html"><img src="assets/img/logo.png" alt="logo" width="200px"></a>
+                    <a class="navbar-brand smoothie logo logo-light" href="index.html"><img src="assets/img/logo.png" alt="logo" width="200px" style="max-height:inherit"></a>
                     <a class="navbar-brand smoothie logo logo-dark" href="index.html"><img src="assets/img/logo_reverse.png" alt="logo"></a> 
                 </div>
 
@@ -96,7 +96,7 @@
                 <div class="collapse navbar-collapse" id="main-navigation">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Accueil<span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Accueil</a>
                             <ul class="dropdown-menu">
 
                                <!--  <li class="dropdown-submenu">
@@ -158,7 +158,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">L'équipe <span class="pe-7s-angle-down"></span></a>
+                            <a href="#lekip" class="dropdown-toggle">L'équipe</a>
                             <ul class="dropdown-menu" role="menu">
                                 <!-- <li><a href="footer-1.html">Footer 1</a></li>
                                 <li><a href="footer-2.html">Footer 2</a></li>
@@ -300,6 +300,7 @@
         <header id="headerwrap" class="backstretched fullheight agency-slider backstretch-overlay-alt">
             <div class="container vertical-center">
                 <div class="intro-text vertical-center text-left smoothie">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/aNJuTBwLIRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="intro-heading wow fadeIn heading-font" data-wow-delay="0.2s">ExploRun</div>
                     <div class="intro-sub-heading wow fadeIn secondary-font" data-wow-delay="0.4s">Vous souhaitez découvrir la Réunion autrement ? Découvrez nos circuits <span class="rotate">divertissants, personnalisés, sportifs</span></div>
                     <a href="#welcome" class="btn btn-primary btn-white mt30 page-scroll" data-wow-delay="0.6s">En savoir plus</a>
@@ -328,7 +329,7 @@
                         </div>
 
                         <div class="col-md-6">
-                            <img src="assets/img/isometric-ipad-white.png" class="img-responsive alignright wow fadeIn" data-wow-delay="0.5s" alt="">
+                            <img src="assets/img/team_building.jpg" class="img-responsive alignright wow fadeIn" data-wow-delay="0.5s" alt="">
                         </div>
                     </div>
                 </div>
@@ -336,7 +337,7 @@
             </div>
         </section>
 
-        <section class="white-bg">
+        <section class="white-bg" id="lekip">
             <div class="section-inner nopadding-bottom">
                 <div class="container">
                     <div class="row">
